# Procurement_Sentinel_Autonomous_Tender_Triage_-_Compliance_Intelligence_System

./: .env.example  .gitignore  pyproject.toml  requirements.txt
data/: company_profile.json
src/: config.py
src/agents/: compliance.py  decision.py  extraction.py  graph.py
src/clients/: tender_client.py
src/ingestion/: chunker.py  document_loader.py
src/rag/: indexer.py  retriever.py
src/schemas/: company.py  decision.py  document.py  tender.py
tests/: test_chunker.py  test_tender_client.py
