[project]
name = "procurement-sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.0",
    "alembic>=1.13.0",
    "arize-phoenix>=4.0.0",
    "asyncpg>=0.29.0",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-identity>=1.18.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-search-documents>=11.5.0",
    "azure-servicebus>=7.12.0",
    "azure-storage-blob>=12.22.0",
    "beautifulsoup4>=4.12.0",
    "black>=24.8.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "lxml>=5.3.0",
    "markdownify>=0.13.0",
    "mypy>=1.11.0",
    "numpy>=1.26.0",
    "openai>=1.50.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "pandas>=2.2.0",
    "pre-commit>=3.8.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pymupdf>=1.24.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.0",
    "ruff>=0.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "uuid7>=0.1.0",
    "uvicorn[standard]>=0.30.0",
]
